k8s/apps/datalake-alerts/alertmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ignore-check.kube-linter.io/dangling-service: Check is incompatible with prometheus-operator CRDs
    ingress.thaum.xyz/probe-uri: /-/healthy
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
  labels:
    app.kubernetes.io/component: alert-router
    app.kubernetes.io/instance: main
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: kube-prometheus
  name: alertmanager
spec:
  ingressClassName: private
  rules:
    - host: alertmanager.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: alertmanager-main
                port:
                  name: web
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - alertmanager.ankhmorpork.thaum.xyz
      secretName: alertmanager-tls
